# micro-rdk

./: .canon.yaml  .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  OTA.md  README.md  buf.gen.yaml  build.rs  cargo-generate.toml  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: canary.yml  canary_ota.yml  canary_summary.yml  ci.yml  esp32.yml  format.yml  license_finder.yml  native.yml  publish.yml  test.yml  upload_bucket.yml
canary/: canary.go  canary_ota.py  canary_test.py  daily_summary.py  go.mod  go.sum  requirements.txt
certs/: isrgrootx1.pem
doc/: dependency_decisions.yml
etc/docker/: Dockerfile  README.md  docker.make  entrypoint.sh
etc/ota-dev-server/: Cargo.toml
etc/ota-server/: Cargo.toml
etc/ota-server/src/: main.rs
examples/: Cargo.toml  Makefile  build.rs  esp32.rs  sdkconfig.defaults  sdkconfig.defaults.esp32
examples/.cargo/: config.toml
examples/esp-idf-component/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
examples/esp-idf-component/main/: Kconfig.projbuild  idf_component.yml  main.c
examples/esp32/: Cargo.toml  build.rs  esp32-driver.rs  esp32-server.rs  esp32-tmpcpy.rs  esp32.rs  esp32_sctp.rs  esp32_static.rs  esp32_webrtc.rs  esp32_webrtc_with_config.rs  partitions.csv
examples/esp32-with-cred/: esp32-server-with-cred.rs
examples/micro-rdk-esp32-sensor-examples/: Cargo.toml  README.md
examples/micro-rdk-esp32-sensor-examples/src/: lib.rs
examples/micro-rdk-modular-driver-examples/: Cargo.toml
examples/micro-rdk-modular-driver-examples/src/: lib.rs  water_pump.rs
examples/modular-drivers/: Cargo.toml  README.md  bindings.h  build.rs
examples/modular-drivers/bme280-ulp/: i2c.S  stack.S  ulp.S
examples/modular-drivers/src/: README.md  bme280_ulp.rs  free_heap_sensor.rs  lib.rs  moisture_sensor.rs  water_pump.rs  wifi_rssi_sensor.rs
examples/native/: Cargo.toml  build.rs  native-server.rs  native.rs
micro-rdk/: Cargo.toml  buf.gen.yaml  build.rs  sdkconfig.defaults
micro-rdk-ffi/: Cargo.toml  Makefile  build.rs  cbindgen.toml
micro-rdk-ffi/example/: example.c
micro-rdk-ffi/include/: micrordk.h
micro-rdk-ffi/micrordklib-idf-component/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
micro-rdk-ffi/src/ffi/: config.rs  errors.rs  hash_map.rs  mod.rs  movement_sensor.rs  runtime.rs  sensor.rs
micro-rdk-installer/: Cargo.toml  README.md
micro-rdk-installer/src/: error.rs  lib.rs  main.rs
micro-rdk-installer/src/nvs/: data.rs  metadata.rs  partition.rs  request.rs
micro-rdk-macros/: Cargo.toml
micro-rdk-macros/src/: lib.rs
micro-rdk-macros/tests/: test.rs
micro-rdk-nmea/: Cargo.toml  README.md  build.rs
micro-rdk-nmea-macros/: Cargo.toml
micro-rdk-nmea-macros/src/: attributes.rs  composition.rs  lib.rs  utils.rs
micro-rdk-nmea/src/: lib.rs
micro-rdk-nmea/src/generate/: mod.rs
micro-rdk-nmea/src/messages/: message.rs  mod.rs  pgns.rs
micro-rdk-nmea/src/parse_helpers/: enums.rs  errors.rs  mod.rs  parsers.rs
micro-rdk-nmea/src/viamboat/: mod.rs  sensors.rs
micro-rdk-server/: Cargo.toml  build.rs  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c6
micro-rdk-server/.cargo/: config.toml
micro-rdk-server/esp32/: esp32-server.rs  main.rs  ota_8mb_partitions.csv
micro-rdk-server/native/: main.rs
micro-rdk/.cargo/: config.toml
micro-rdk/certs/: google_gts_root_r1.crt
micro-rdk/src/: lib.rs
micro-rdk/src/common/: actuator.rs  adxl345.rs  analog.rs  app_client.rs  base.rs  board.rs  button.rs  camera.rs  config.rs  config_monitor.rs  config_restart.rs  credentials_storage.rs  data_collector.rs  data_manager.rs  data_store.rs  digital_interrupt.rs  encoder.rs  entry.rs  exec.rs  generic.rs  gpio_motor.rs  gpio_servo.rs  grpc.rs  grpc_client.rs  i2c.rs  ina.rs  log.rs  math_utils.rs  mod.rs  moisture_sensor.rs  motor.rs  movement_sensor.rs  mpu6050.rs  ota.rs  power_sensor.rs  registry.rs  restart_monitor.rs  robot.rs  runtime.rs  sensor.rs  (+5 more)
micro-rdk/src/common/camera/: fake_camera.rs  mod.rs
micro-rdk/src/common/conn/: errors.rs  mdns.rs  network.rs  server.rs  utils.rs  viam.rs
micro-rdk/src/common/provisioning/: mod.rs  server.rs  storage.rs
micro-rdk/src/common/webrtc/: api.rs  candidates.rs  certificate.rs  client_hello.rs  dtls.rs  grpc.rs  ice.rs  io.rs  sctp.rs  signaling_server.rs  udp_mux.rs
micro-rdk/src/esp32/: analog.rs  board.rs  camera.rs  certificate.rs  coredump.rs  dtls.rs  encoder.rs  entry.rs  exec.rs  hcsr04.rs  i2c.rs  log.rs  mod.rs  nvs_storage.rs  ota.rs  pin.rs  pulse_counter.rs  pwm.rs  rpc_heap.rs  single_encoded_motor.rs  single_encoder.rs  sys.rs  tcp.rs  tls.rs  utils.rs  webhook.rs
micro-rdk/src/esp32/camera/: fake_camera.rs  mod.rs
micro-rdk/src/esp32/conn/: mdns.rs  network.rs  wifi_error.rs
micro-rdk/src/esp32/provisioning/: server.rs  wifi_provisioning.rs
micro-rdk/src/native/: certificate.rs  dtls.rs  entry.rs  exec.rs  log.rs  mod.rs  tcp.rs  tls.rs
micro-rdk/src/native/conn/: mdns.rs
src/: analog.rs  base.rs  board.rs  camera.rs  esp_idf_svc.rs  exec.rs  grpc.rs  lib.rs  main.rs  motor.rs  proto.rs  robot.rs  robot_client.rs  tcp.rs  tls.rs
src/common/: actuator.rs  adxl345.rs  analog.rs  app_client.rs  base.rs  board.rs  camera.rs  config.rs  digital_interrupt.rs  encoder.rs  entry.rs  error.rs  generic.rs  gpio_motor.rs  gpio_servo.rs  grpc.rs  grpc_client.rs  i2c.rs  ina.rs  math_utils.rs  mod.rs  moisture_sensor.rs  motor.rs  movement_sensor.rs  mpu6050.rs  pin.rs  power_sensor.rs  registry.rs  robot.rs  sensor.rs  servo.rs  (+3 more)
templates/module/: Cargo.toml  Cargo.toml.liquid  README.md  cargo-generate.toml
templates/module/src/: lib.rs
templates/project/: .canon.yaml  .gitignore  Cargo.toml  Cargo.toml.liquid  Makefile  build.rs  cargo-generate.toml  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3  viam.json
templates/project/.cargo/: config.toml
templates/project/.github/workflows/: publish.yml
templates/project/src/: main.rs
(+51 files in other folders)
