[workspace]
resolver = "2"

members = [
  "micro-rdk",
  "micro-rdk-installer",
  "micro-rdk-macros",
  "micro-rdk-nmea",
  "micro-rdk-nmea-macros",
  "micro-rdk-server",
  "micro-rdk-ffi",
  "examples/modular-drivers",
  "etc/ota-dev-server",
]

default-members = [
  "micro-rdk",
  "micro-rdk-macros",
  "micro-rdk-server",
]

[workspace.package]
authors = ["Viam, inc. <contact@viam.com>"]
description = "Viam RDK for microcontroller"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/viamrobotics/micro-rdk"
version = "0.4.1-rc10"
rust-version = "1.83"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[profile.release-ffi]
inherits = "release"
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "s"

[workspace.dependencies]
anyhow = "1.0.94"
async-channel = "2"
async-executor = "1"
async-io = "2"
async-lock = "3.4.0"
async-std-openssl = "0.6.3"
atomic-waker = "1.1.2"
axum = "0.7.9"
axum-extra = "0.9.6"
base64 = "0.22.1"
bincode = "2.0.0-rc.3"
bitfield = "0.17.0"
bytecodec = "0.4.15"
bytes = "1.9.0"
cargo_metadata = "0.19.1"
cbindgen = "0.27.0"
chrono = "0.4.38"
chrono-tz = "0.10.0"
clap = "4.5.23"
crc32fast = "1.4.2"
dialoguer = "0.11.0"
dns-message-parser = { version = "0.7", default-features = false}
either = "1.13.0"
# TODO(RSDK-8991): Upgrade to latest `embedded-hal`
embedded-hal = { version = "~0.2", features = ["unproven"] }
embedded-svc = "0.27"
embuild = "0.32.0"
env_logger = "0.11.5"
esp-idf-part = "0.5.0"
# TODO(RSDK-8994): Upgrade to latest `esp-idf-svc`
esp-idf-svc = { version = "~0.48", default-features = false }
espflash = { git = "https://github.com/viamrobotics/espflash.git", branch = "monitor-output" }
futures = "0.3.31"
futures-lite = "2"
# TODO(RSDK-8995): Upgrade to latest `rustls` infrastructure
futures-rustls = "~0.24"
futures-util = "0.3.31"
http-body-util = "0.1.2"
hyper = { version = "1.5", default-features = false, features = ["server", "client", "http2"] }
# TODO(RSDK-9045): Stop using lazy-static
lazy_static = "1.5.0"
local-ip-address = "0.6.3"
log = "0.4.22"
mdns-sd = { version = "0.12", default-features = false, features = ["async"] }
micro-rdk = { path = "./micro-rdk", default-features = false, features = [] }
micro-rdk-macros = { path = "./micro-rdk-macros" }
micro-rdk-nmea = { path = "./micro-rdk-nmea" }
micro-rdk-nmea-macros = { path = "./micro-rdk-nmea-macros" }
micro-rdk-modular-driver-example = {path = "./examples/modular-drivers" }
once_cell = "1.20.2"
openssl = { version = "0.10.68" }
pin-project = "1.1.7"
pin-project-lite = "0.2.15"
postcard = { version = "1.1.1", features = ["alloc", "use-std"] }
printf-compat = "0.1.1"
proc-macro-crate = "3.2.0"
proc-macro2 = "1.0.92"
prost = "0.13.4"
prost-types = "0.13.4"
quote = "1.0.37"
rand = "0.8.5"
# TODO(RSDK-8996): Upgrade `rcgen` to latest release
rcgen = "~0.12"
regex = "1.11"
reqwest = "0.12.9"
reqwless = "0.13.0"
# TODO(RSDK-8996): Upgrade `ringbuf` to latest release
ringbuf = "~0.3"
# TODO(RSDK-8995): Upgrade to latest `rustls` infrastructure
rustls = { version = "~0.21", features = ["logging", "tls12"] }
rustls-pemfile = { version = "2.2" }
scopeguard = "1.2.0"
sctp-proto = "0.3.0"
sdp = "0.6.2"
# TODO(RSDK-9138): Upgrade to latest secrecy crate
secrecy = { version = "~0.8.0", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
socket2 = "0.5.8"
stun_codec = { version = "0.3.0" , git = "https://github.com/viamrobotics/stun_codec"}
syn = "2.0.90"
tempfile = "3.14.0"
test-log = "0.2.16"
thiserror = "2.0.4"
tokio = { version = "1.42.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trackable = "1.3.0"
uuid = "1.11.0"
version-compare = "0.2"
# TODO(RSDK-8995): Upgrade to latest `rustls` infrastructure
webpki-roots = "~0.24"
