[workspace]
resolver = "3"

members = [
  "micro-rdk",
  "micro-rdk-installer",
  "micro-rdk-macros",
  "micro-rdk-nmea",
  "micro-rdk-nmea-macros",
  "micro-rdk-server",
  "micro-rdk-ffi",
  "examples/modular-drivers",
  "etc/ota-dev-server",
]

default-members = [
  "micro-rdk",
  "micro-rdk-macros",
  "micro-rdk-server",
]

[workspace.package]
authors = ["Viam, inc. <contact@viam.com>"]
description = "Viam RDK for microcontroller"
edition = "2024"
license = "AGPL-3.0"
repository = "https://github.com/viamrobotics/micro-rdk"
version = "0.5.1"
rust-version = "1.89"

[profile.release]
debug = true
opt-level = "z"

[profile.dev]
debug = true
opt-level = "z"

[patch.crates-io]
concurrent-queue = { git = "https://github.com/npmenard/concurrent-queue", rev = "ffdd176" }

[workspace.dependencies]
anyhow = "1.0.100"
async-channel = "2"
async-executor = "1"
async-io = "2"
async-lock = "3.4.1"
async-std-openssl = "0.6.3"
atomic-waker = "1.1.2"
axum = "0.8.8"
axum-extra = "0.10.2"
base64 = "0.22.1"
bitfield = "0.19.2"
bytecodec = "0.5.0"
bytes = "1.10.1"
cargo_metadata = "0.23.0"
cbindgen = "0.29.0"
check_keyword = { version = "0.4.1", default-features = false, features = [ "2021" ] }
chrono = "0.4.42"
chrono-tz = "0.10.4"
clap = "4.5.48"
convert_case = "0.8.0"
crc32fast = "1.5.0"
dialoguer = "0.12.0"
dns-message-parser = { version = "0.9", default-features = false}
either = "1.15.0"
embedded-hal = "1.0.0"
embedded-svc = "~0.28"
embuild = "0.33.1"
env_logger = "0.11.8"
esp-idf-part = "0.6.0"
esp-idf-svc = { version = "~0.51", default-features = false }
espflash = { git = "https://github.com/viamrobotics/espflash.git", branch = "monitor-output" }
futures = "0.3.31"
h2 = "=0.4.12"
futures-lite = "2"
# TODO(RSDK-8995): Upgrade to latest `rustls` infrastructure
futures-rustls = "~0.24"
futures-util = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.8", default-features = false, features = ["server", "client", "http2"] }
local-ip-address = "0.6.5"
log = "0.4.28"
mdns-sd = { version = "0.15", default-features = false, features = ["async"] }
micro-rdk = { path = "./micro-rdk", default-features = false, features = [] }
micro-rdk-macros = { path = "./micro-rdk-macros" }
micro-rdk-nmea = { path = "./micro-rdk-nmea" }
micro-rdk-nmea-macros = { path = "./micro-rdk-nmea-macros" }
micro-rdk-modular-driver-example = {path = "./examples/modular-drivers" }
num2words = "1.2.0"
once_cell = "1.21.3"
openssl = { version = "0.10.73" }
pin-project = "1.1.10"
pin-project-lite = "0.2.16"
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
printf-compat = "0.2.1"
proc-macro-crate = "3.4.0"
proc-macro2 = "1.0.101"
prost = "0.14.3"
prost-types = "0.14.3"
quote = "1.0.41"
rand = "0.9.2"
rcgen = "0.14.5"
regex = "1.11"
reqwest = "0.12.26"
reqwless = "0.13.0"
# TODO(RSDK-8996): Upgrade `ringbuf` to latest release
ringbuf = "~0.3"
# TODO(RSDK-8995): Upgrade to latest `rustls` infrastructure
rustls = { version = "~0.21", features = ["logging", "tls12"] }
rustls-pemfile = { version = "2.2" }
scopeguard = "1.2.0"
sctp-proto = "0.5.0"
sdp = "0.10.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
socket2 = "0.6.0"
stun_codec = "0.4.0"
syn = "2.0.106"
tempfile = "3.23.0"
test-log = "0.2.18"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trackable = "1.3.0"
uuid = "1.18.1"
version-compare = "0.2"
# TODO(RSDK-8995): Upgrade to latest `rustls` infrastructure
webpki-roots = "~0.24"
