[package]
name = "examples"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

build = "build.rs"
publish = false

[features]
qemu = []

[target.'cfg(not(target_os = "espidf"))'.dependencies]
micro-rdk = { path = "../micro-rdk", features = ["native"], default-features = false }
env_logger = "0.10.0"
local-ip-address = { version = "0.4.9" }
log = "0.4"
anyhow = { version = "1", features = ["backtrace"] }


[target.'cfg(target_os="espidf")'.dependencies]
anyhow = {version = "1", features = ["backtrace"]}
embedded-svc = "0.26.4"
embedded-hal = { version = "0.2.7", features = ["unproven"]}
micro-rdk = { path = "../micro-rdk", default-features = false, features = ["esp32"] }
log = "0.4"
async-channel = "1.8.0"
smol = "1.2"
futures-lite = "1.12.0"
reqwless = "0.5.0"


[dependencies]
serde = "1.0.145"
serde_json = "1.0.97"
thiserror = "1.0.47"


[build-dependencies]
anyhow = "1"
const-gen = "1.3.0"
embuild = "0.31.3"
gethostname = "0.4.1"
local-ip-address = "0.4.9"
prost-types = "0.11.1"
serde = { version="1.0.145",features=["derive"] }
serde_json = "1.0.86"
tokio = { version = "1", features = ["full"] }
viam = { version = ">=0.0.17", git = "https://github.com/viamrobotics/viam-rust-sdk.git" }
viam-rust-utils = ">=0.0.25"
rcgen = { version =  "0.10.0" }
ring = "0.16"
der = {version = "0.7.7", features = ["pem", "alloc","zeroize"] }

[[bin]]
name = "native-server"
path = "native/native-server.rs"

[[bin]]
name = "esp32-server"
path = "esp32/esp32-server.rs"

[[bin]]
name = "esp32-server-with-cred"
path = "esp32-with-cred/esp32-server-with-cred.rs"

[package.metadata.esp-idf-sys]
esp_idf_tools_install_dir = "global"
esp_idf_sdkconfig_defaults = ["examples/sdkconfig.defaults", "examples/sdkconfig.defaults.esp32"]
