[package]
name = "examples"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

build = "build.rs"
publish = false

[features]
qemu = []

[target.'cfg(not(target_os = "espidf"))'.dependencies]
env_logger.workspace = true
local-ip-address.workspace = true
micro-rdk = { workspace = true, features = ["native"], default-features = true }


[target.'cfg(target_os="espidf")'.dependencies]
async-channel.workspace = true
embedded-hal.workspace = true
embedded-svc.workspace = true
futures-lite.workspace = true
micro-rdk = { workspace = true, features = ["esp32", "binstart", "provisioning"], default-features = true }


[dependencies]
log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true


[build-dependencies]
embuild.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "native-server"
path = "native/native-server.rs"

[[bin]]
name = "esp32-server"
path = "esp32/esp32-server.rs"


[package.metadata.esp-idf-sys]
esp_idf_tools_install_dir = "global"
esp_idf_sdkconfig_defaults = ["examples/sdkconfig.defaults", "examples/sdkconfig.defaults.esp32"]
