[package]
name = "micro-rdk-ffi"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

build = "build.rs"
publish = false

[lib]
name = "micrordk"
crate-type = ["staticlib"] # Creates static lib

[target.'cfg(not(target_os = "espidf"))'.dependencies]
env_logger.workspace = true
local-ip-address.workspace = true
micro-rdk = { workspace = true, features = ["data", "native", "provisioning"], default-features = true }

[target.'cfg(target_os="espidf")'.dependencies]
async-channel.workspace = true
embedded-hal.workspace = true
embedded-svc.workspace = true
futures-lite.workspace = true
micro-rdk = { workspace = true, features = ["esp32", "data", "provisioning"], default-features = true }


[dependencies]
base64.workspace = true
lazy_static.workspace = true
log.workspace = true
thiserror.workspace = true

[build-dependencies]
cargo_metadata.workspace = true
cbindgen.workspace = true
embuild.workspace = true
serde.workspace = true
serde_json.workspace = true

[package.metadata.esp-idf-sys]
esp_idf_tools_install_dir = "global"
esp_idf_sdkconfig_defaults = [
  "micro-rdk-server/sdkconfig.defaults",
  "micro-rdk-server/sdkconfig.defaults.esp32"
]
