[package]
name = "micro-rdk-ffi"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

build = "build.rs"
publish = false

[lib]
name = "micrordk"
crate-type = ["staticlib"] # Creates static lib

[target.'cfg(not(target_os = "espidf"))'.dependencies]
env_logger.workspace = true
local-ip-address.workspace = true
micro-rdk = { workspace = true, features = ["data", "native"], default-features = true }

[target.'cfg(target_os="espidf")'.dependencies]
async-channel.workspace = true
embedded-hal.workspace = true
embedded-svc.workspace = true
futures-lite.workspace = true
micro-rdk = { workspace = true, features = ["esp32", "data", "data-upload-hook-unstable"], default-features = true }


[dependencies]
base64.workspace = true
lazy_static.workspace = true
log.workspace = true
thiserror.workspace = true

[build-dependencies]
cargo_metadata.workspace = true
cbindgen.workspace = true
embuild.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
