[package]
name = "micro-rdk-installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.23", features = ["derive"] }
crc32fast = "1.3.2"
der = {version = "0.7.7", features = ["pem", "alloc","zeroize"] }
dialoguer = "0.10.4"
espflash = "2.0.1"
gethostname = "0.4.3"
local-ip-address = "0.5.3"
log = "0.4.20"
md5 = "0.7.0"
packed_struct = "0.10.1"
rcgen = "0.11.1"
reqwest = "0.11.20"
ring = "0.16.20"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8.0"
thiserror = "1.0.46"
tokio = "1.29.1"
viam = { version = ">=0.0.7", git = "https://github.com/viamrobotics/viam-rust-sdk.git" }
viam-rust-utils = "0.1.2"
