[package]
name = "micro-rdk-installer"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
crc32fast.workspace = true
der.workspace = true
dialoguer.workspace = true
env_logger.workspace = true
espflash.workspace = true
gethostname.workspace = true
local-ip-address.workspace = true
log.workspace = true
md5.workspace = true
packed_struct.workspace = true
rcgen.workspace = true
reqwest.workspace = true
ring.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
viam-rust-utils.workspace = true
viam.workspace = true
