[package]
name = "micro-rdk-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = "1.0.109"

[[test]]
name = "do-command-tests"
path = "tests/test.rs"