[package]
name = "micro-rdk-macros"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "2.0.0"
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = "1.0.109"

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
micro-rdk = { path = "../micro-rdk", features = ["native"] }

[[test]]
name = "do-command-tests"
path = "tests/test.rs"
