[package]
name = "micro-rdk-macros"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro-crate.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
micro-rdk = { workspace = true, features = ["native"] }

[[test]]
name = "do-command-tests"
path = "tests/test.rs"
