[package]
name = "micro-rdk-nmea"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
esp32 = ['micro-rdk/esp32']
native = ['micro-rdk/native']

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
micro-rdk = { workspace = true }
micro-rdk-nmea-macros = { workspace = true }
thiserror = { workspace = true }

[package.metadata.com.viam]
module = true
