[package]
name = "micro-rdk-server"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

build = "build.rs"
publish = false

[features]
qemu = []

[target.'cfg(not(target_os = "espidf"))'.dependencies]
env_logger.workspace = true
local-ip-address.workspace = true
micro-rdk = { workspace = true, features = ["native"], default-features = true }


[target.'cfg(target_os="espidf")'.dependencies]
async-channel.workspace = true
embedded-hal.workspace = true
embedded-svc.workspace = true
futures-lite.workspace = true
micro-rdk = { workspace = true, features = ["esp32", "binstart"], default-features = true }
micro-rdk-modular-driver-example = {workspace = true, features = ["esp32"]}


[dependencies]
log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true


[build-dependencies]
embuild.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "micro-rdk-server-native"
path = "native/main.rs"

[[bin]]
name = "micro-rdk-server-esp32"
path = "esp32/main.rs"


[package.metadata.esp-idf-sys]
esp_idf_version = "v4.4.8"
esp_idf_tools_install_dir = "custom:target/.embuild/espressif"
esp_idf_sdkconfig_defaults = [
  "micro-rdk-server/sdkconfig.defaults",
]

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp32-camera", version = "2.0.9"}
bindings_module = "camera"
bindings_header = "bindings.h"
