[package]
name = "micro-rdk"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

links = "micro_rdk"


[lib]
crate-type = ["lib"]

[features]
default = ["builtin-components", "data"]
binstart = ["esp-idf-svc/binstart"]
libstart = ["esp-idf-svc/libstart"]
builtin-components = []
camera = []
esp32 = ["dep:esp-idf-svc", "dep:embedded-svc", "dep:embedded-hal", "esp-idf-svc/std", "esp-idf-svc/alloc"]
native = ["dep:rustls", "dep:webpki-roots", "dep:rustls-pemfile", "dep:mdns-sd", "dep:local-ip-address", "dep:openssl", "dep:rcgen", "dep:async-std-openssl"]
data-upload-hook-unstable = ["data", "esp32"]
data = []

[dev-dependencies]
test-log.workspace = true
env_logger.workspace = true

[target.'cfg(not(target_os = "espidf"))'.dependencies]
async-std-openssl = { workspace = true, optional = true }
futures-rustls.workspace = true
local-ip-address = { workspace = true, optional = true }
mdns-sd = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }

[dependencies]
async-channel.workspace = true
async-executor.workspace = true
async-io.workspace = true
atomic-waker.workspace = true
base64.workspace = true
bitfield.workspace = true
bytecodec.workspace = true
bytes.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
either.workspace = true
embedded-hal = { workspace = true, optional = true }
embedded-svc = { workspace = true, optional = true }
esp-idf-svc = { workspace = true, optional = true }
futures-lite.workspace = true
futures-util.workspace = true
http-body-util.workspace = true
hyper.workspace = true
ignore.workspace = true
lazy_static.workspace = true
log.workspace = true
micro-rdk-macros.workspace = true
once_cell.workspace = true
pin-project-lite.workspace = true
prost.workspace = true
rand.workspace = true
scopeguard.workspace = true
sctp-proto.workspace = true
sdp.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
socket2.workspace = true
stun_codec.workspace = true
thiserror.workspace = true
trackable.workspace = true
ringbuf.workspace = true
pin-project.workspace = true
async-lock.workspace = true
dns-message-parser.workspace = true

[build-dependencies]
embuild.workspace = true
regex.workspace = true
