[package]
name = "ota-dev-server"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
axum = {version = "0.7.9", features = ["http2"]}
axum-extra = "0.9.6"
local-ip-address.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
