[package]
name = "ota-dev-server"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true, features = ["http2"]}
axum-extra.workspace = true
local-ip-address.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
