[package]
name = "micro-rdk-esp32-sensor-examples"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Morrow <andrew.morrow@viam.com>"]
resolver = "2"

[dependencies]
log = "0.4"
micro-rdk = {version = "0.1.9-rc3", git = "https://github.com/viamrobotics/micro-rdk.git", features = ["esp32"], rev = "56615f4"}

[package.metadata.com.viam]
module = true
