[package]
name = "micro-rdk-modular-driver-examples"
version = "0.2.0"
edition = "2021"
authors = ["Viam, inc. <contact@viam.com>"]
resolver = "2"
rust-version = "1.75"
license = "AGPL-3.0"

[dependencies]
log = "0.4"
micro-rdk = {git = "https://github.com/viamrobotics/micro-rdk.git", version = "0.2.0", rev = "ad31cf1"}

[package.metadata.com.viam]
module = true
