[package]
name = "micro-rdk-modular-driver-example"
authors.workspace = true
description = "Modular driver examples for Micro-RDK"
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
esp32 = ['micro-rdk/esp32']

[dependencies]
log.workspace = true
micro-rdk = { workspace = true }

[package.metadata.com.viam]
module = true
